log
Thu 09 Mar 2023 04:08:04 PM UTC: 
 tests:  0|7
total_score: 0/70
ef9b54b
Thu 09 Mar 2023 04:14:31 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:13: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   16 |   int aux = a;
      |             ^
exercises.c:17:6: error: expected expression before ‘=’ token
   17 |   a* = *b;
      |      ^
exercises.c:18:6: error: expected expression before ‘=’ token
   18 |   b* = aux;
      |      ^
cc1: all warnings being treated as errors
Compilation failed
5790894
Thu 09 Mar 2023 04:14:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:6: error: expected expression before ‘=’ token
   17 |   a* = *b;
      |      ^
exercises.c:18:6: error: expected expression before ‘=’ token
   18 |   b* = aux;
      |      ^
Compilation failed
806012c
Thu 09 Mar 2023 04:15:02 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
bf75c24
Thu 09 Mar 2023 04:23:33 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:31:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   31 |     if (*min > *a);
      |     ^~
exercises.c:32:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   32 |       *min = *a;
      |       ^
exercises.c:33:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   33 |     if (*max < *a);
      |     ^~
exercises.c:34:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   34 |       *max = *a;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
da0e07f
Thu 09 Mar 2023 04:23:50 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
46116a7
Thu 09 Mar 2023 04:27:06 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:31:16: error: invalid type argument of unary ‘*’ (have ‘int’)
   31 |     if (*min > *a[k])
      |                ^~~~~
exercises.c:32:14: error: invalid type argument of unary ‘*’ (have ‘int’)
   32 |       *min = *a[k];
      |              ^~~~~
exercises.c:33:16: error: invalid type argument of unary ‘*’ (have ‘int’)
   33 |     if (*max < *a[k])
      |                ^~~~~
exercises.c:34:14: error: invalid type argument of unary ‘*’ (have ‘int’)
   34 |       *max = *a[k];
      |              ^~~~~
Compilation failed
c38ed6a
